# pyAUSAXS

./: .gitignore  CONTRIBUTING.md  README.md  citation.cff  integration.py  pyproject.template.toml  pyproject.toml  wrapper.py
.github/workflows/: build-release.yml  build-wheels.yml  cibuildwheel.yml
examples/: 3_advanced_model_fitting.py  6_consistent_hydration.py  7_weighted_distance_histograms.py  advanced_model_fitting.py  consistent_hydration.py  crystal_scattering.py  debye_scattering.py  distance_histograms.py  model_fitting.py  weighted_distance_histograms.py
pyausaxs/: __init__.py  __main__.py  __pyinstaller.py  architecture.py  config.py  integration.py  loader.py  signatures.py  wrapper.py
pyausaxs/gui/: __init__.py  data_pane.py  em_pane.py  gui.py  panes.py  plotting.py  rigidbody_pane.py  runner.py  saxs_pane.py  session.py  structure_pane.py  theme.py  widgets.py
pyausaxs/hooks/: hook-pyausaxs.py
pyausaxs/plot/: __init__.py  fetch_plot_scripts.py  plot.py  plot_animator.py  plot_helper.py
pyausaxs/wrapper/: AUSAXS.py  BackendObject.py  DataFile.py  Datafile.py  Debye.py  ExactDebye.py  Filetypes.py  FitResult.py  Fitting.py  FormFactor.py  Histogram.py  IterativeFit.py  Models.py  Molecule.py  Output.py  PDBfile.py  Rigidbody.py  Settings.py  sasview.py  (+1 more)
scripts/: gen_pyproject.py
test/: Ag_crystal.cif  test.py
tests/: helpers.py  test.py  test_cmd_tools.py  test_fit.py  test_form_factors.py  test_histogram_debye.py  test_imports.py  test_io.py  test_misc.py  test_molecule.py  test_rigidbody.py  test_settings.py  test_singleton.py
