[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyausaxs"
version = "1.0.0"
description = "Python wrapper for AUSAXS native library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "py-cpuinfo>=8.0.0",
  "numpy>=1.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyausaxs"]

[tool.setuptools.package-data]
"pyausaxs" = ["resources/libausaxs.so", "resources/libausaxs.dylib", "resources/libausaxs.dll"]

[tool.setuptools]
include-package-data = true